fix: scrollbar invisible when not enough content to scroll

--- a/src/styles/Extn-CustomSnippets.less
+++ b/src/styles/Extn-CustomSnippets.less
@@ -137,7 +137,7 @@
 }
 
 #custom-snippets-panel .resizable-content {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: auto;
 }
 
